--- a/app/components/StopMotionApp.module.css
+++ b/app/components/StopMotionApp.module.css
@@ -186,13 +186,6 @@
     white-space: nowrap;
 }
 
-.voiceHint {
-    display: block;
-    text-align: center;
-    font-size: 0.9em;
-    margin-bottom: 10px;
-}
-
 .projectInfo {
     display: flex;
     justify-content: space-between;
@@ -255,8 +248,8 @@
 
 .closeProjectButton {
     padding: 0.5rem 1rem;
-    background-color: #f44336;
-    color: white;
+    background-color: white;
+    color: black;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -264,7 +257,7 @@
 }
 
 .closeProjectButton:hover {
-    background-color: #d32f2f;
+    background-color: lightgray;
 }
 
 .projectItem {
@@ -306,4 +299,52 @@
 
 .deleteProjectButton:hover {
     color: red;
+}
+
+.thumbnailContainer {
+    position: relative;
+    width: 90%;
+    aspect-ratio: 4/3;
+    margin: 5px;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+    background-color: #f0f0f0;
+    /* Light grey background for empty frames */
+}
+
+.thumbnailContainer.filled {
+    background-color: transparent;
+}
+
+.thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.deleteFrameButton {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: none;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.thumbnailContainer:hover .deleteFrameButton {
+    opacity: 1;
+}
+
+.deleteFrameButton:hover {
+    background-color: rgba(255, 255, 255, 0.9);
 }
